--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -307,9 +307,9 @@
     <div class="col-xs-12">
       <h2>Mes appareils</h2>
       <ul class="list-group">
-        <app-appareil [appareilName]="appareilOne" [appareilStatus]="'Allumé'"></app-appareil>
-        <app-appareil [appareilName]="appareilTwo" [appareilStatus]="'Eteint'"></app-appareil>
-        <app-appareil [appareilName]="appareilThree" [appareilStatus]="'Allumé'"></app-appareil>
+        <app-appareil [appareilName]="appareilOne" [appareilStatus]="'allumé'"></app-appareil>
+        <app-appareil [appareilName]="appareilTwo" [appareilStatus]="'éteint'"></app-appareil>
+        <app-appareil [appareilName]="appareilThree" [appareilStatus]="'allumé'"></app-appareil>
         
       </ul>
       <button
