ngClass directive par attribut

--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -1,6 +1,23 @@
-<li class="list-group-item">
-    <div style="background-color:red; width:20px; height:20px;"
-    *ngIf="appareilStatus==='éteint'"></div>
-    <h4 [ngStyle]="{color:getColor()}">Appareil:{{ appareilName }} -- Status: {{ getStatus() }}</h4>
-    <input type="text" class="form-control" placeholder="" name="" id="" [(ngModel)]="appareilName">
+<li
+  [ngClass]="{
+    'list-group-item': true,
+    'list-group-item-success': appareilStatus === 'allumé',
+    'list-group-item-danger': appareilStatus === 'éteint'
+  }"
+>
+  <div
+    style="background-color: red; width: 20px; height: 20px"
+    *ngIf="appareilStatus === 'éteint'"
+  ></div>
+  <h4 [ngStyle]="{ color: getColor() }">
+    Appareil:{{ appareilName }} -- Status: {{ getStatus() }}
+  </h4>
+  <input
+    type="text"
+    class="form-control"
+    placeholder=""
+    name=""
+    id=""
+    [(ngModel)]="appareilName"
+  />
 </li>
