--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -306,12 +306,13 @@
   <div class="row">
     <div class="col-xs-12">
       <h2>Mes appareils</h2>
+      <p>Mise à jour : {{ lastUpdate | date :"short"}}</p>
       <ul class="list-group">
-        <app-appareil *ngFor="let appareil of appareils" 
-                      [appareilName]="appareil.name" 
-                      [appareilStatus]="appareil.status"
+        <app-appareil
+          *ngFor="let appareil of appareils"
+          [appareilName]="appareil.name"
+          [appareilStatus]="appareil.status"
         ></app-appareil>
-        
       </ul>
       <button
         class="btn btn-success"
