--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -306,7 +306,7 @@
   <div class="row">
     <div class="col-xs-12">
       <h2>Mes appareils</h2>
-      <p>Mise à jour : {{ lastUpdate | date :"short"}}</p>
+      <p>Mise à jour : {{ lastUpdate | date :"short" | uppercase}}</p>
       <ul class="list-group">
         <app-appareil
           *ngFor="let appareil of appareils"
