--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -1,3 +1,4 @@
+<!-- ngClass permet de conditionner le style-->
 <li
   [ngClass]="{
     'list-group-item': true,
@@ -5,19 +6,30 @@
     'list-group-item-danger': appareilStatus === 'éteint'
   }"
 >
-  <div
-    style="background-color: red; width: 20px; height: 20px"
+
+
+  <!-- ngIf permet de conditionner via une methode-->
+  <!-- <div
     *ngIf="appareilStatus === 'éteint'"
-  ></div>
+    style="background-color: red; width: 20px; height: 20px"
+  ></div> -->
+
+
+  <!-- ngStyle permet lier une propriete de style en passant un objet appelant une methode-->  
   <h4 [ngStyle]="{ color: getColor() }">
+  <!-- les {{}} permettent d'appeler des propriétés ou des fonctions-->  
     Appareil:{{ appareilName }} -- Status: {{ getStatus() }}
   </h4>
-  <input
-    type="text"
-    class="form-control"
-    placeholder=""
-    name=""
-    id=""
-    [(ngModel)]="appareilName"
-  />
+  <!-- <input type="text"class="form-control"placeholder=""name=""id=""[(ngModel)]="appareilName"/> -->
+
+  <!-- ici la methode du composant appelle la methode du service-->  
+  <button class="btn-btn-success" 
+          (click)="onSwitchOn()"
+          [disabled]="appareilStatus==='allumé'"            
+    >Allumer
+  </button>
+  <button class="btn-btn-success" 
+          (click)="onSwitchOff()"
+          [disabled]="appareilStatus==='éteint'"  
+  >Eteindre</button>
 </li>
