--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,18 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <ul class="navbar-nav">
+      <li routerLinkActive="active">
+        <a class="nav-link" routerLink="auth">Authentification</a>
+      </li>
+      <li routerLinkActive="active">
+        <a class="nav-link" routerLink="appareils">Appareils</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
 <div class="container">
   <div class="row">
     <router-outlet></router-outlet>
-    
   </div>
 </div>
-
