--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-secondary bg-secondary">
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li routerLinkActive="active">
