--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -10,6 +10,7 @@
         [indexOfAppareil]="i"
         [appareilName]="appareil.name"
         [appareilStatus]="appareil.status"
+        [id]="appareil.id"
       ></app-appareil>
     </ul>
     <button
