--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -22,6 +22,10 @@
   </h4>
   <!-- <input type="text"class="form-control"placeholder=""name=""id=""[(ngModel)]="appareilName"/> -->
 
+
+  <!-- lien permettant de naviguer vers l'appareil; nous passons l'id de l'appareil -->
+  <a [routerLink]="[id]">Détails</a>
+
   <!-- ici la methode du composant appelle la methode du service-->  
   <button class="btn btn-success" 
           (click)="onSwitchOn()"
