--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
         <a class="nav-link" routerLink="appareils">Appareils</a>
       </li>
     </ul>
+    <div class="navbar_right">
+      <p>Vous êtes connecté depuis {{secondes}} secondes!</p>
+    </div>
   </div>
 </nav>
 
