create form with template method

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
       <li routerLinkActive="active">
         <a class="nav-link" routerLink="appareils">Appareils</a>
       </li>
+      <li routerLinkActive="active">
+        <a class="nav-link" routerLink="edit">nouvel appareil</a>
+      </li>
     </ul>
     <div class="navbar_right">
       <p>Vous êtes connecté depuis {{secondes}} secondes!</p>
