create userList and newUser components with reactive form module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,10 @@
         <a class="nav-link" routerLink="appareils">Appareils</a>
       </li>
       <li routerLinkActive="active">
-        <a class="nav-link" routerLink="edit">nouvel appareil</a>
+        <a class="nav-link" routerLink="edit">Nouvel appareil</a>
+      </li>
+      <li routerLinkActive="active">
+        <a class="nav-link" routerLink="users">Utilisateurs</a>
       </li>
     </ul>
     <div class="navbar_right">
